objects/Influencer_Grid__c.object
<CustomObject>
    <fields>
        <fullName>AccountId__c</fullName>
        <formula>Opportunity__r.AccountId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AccountId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Look up to Contact</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Influencer Grids</relationshipLabel>
        <relationshipName>Influencer_Maps</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Danfoss__c</fullName>
        <inlineHelpText>Evaluate stakeholder&apos;s attitude toward Danfoss</inlineHelpText>
        <label>Danfoss</label>
        <picklist>
            <picklistValues>
                <fullName>Enthusiastic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Positive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neutral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Negative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hostile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Danger_Signal__c</fullName>
        <label>Danger Signal</label>
        <picklist>
            <picklistValues>
                <fullName>!! - Remove Roadblocks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>! - Improve Relations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>= - Stay in Touch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0 - OK</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EDISC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>E-DISC</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>EDISC__c.Contact__c</field>
                <operation>equals</operation>
                <valueField>$Source.Contact__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>EDISC__c</referenceTo>
        <relationshipLabel>Influencer Grids</relationshipLabel>
        <relationshipName>Influences</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Friend_Enemy__c</fullName>
        <inlineHelpText>Friend: Likes us and helps us to move forwards. Typically they have good experience with us. Other stakeholders listen to our friends. Invaluable if they have high degree of influence.
Enemy: The opposite of a friend. Fights against us but is often nice</inlineHelpText>
        <label>Friend/Enemy</label>
        <picklist>
            <picklistValues>
                <fullName>Friend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enemy</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Influence_on_purchasing_decision__c</fullName>
        <label>Influence on purchasing decision</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Influencers_KPIs__c</fullName>
        <inlineHelpText>List Influencer&apos;s KPI&apos;s and, if known, personal goals</inlineHelpText>
        <label>Influencer&apos;s KPIs</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Key_Message_Value_Prop__c</fullName>
        <inlineHelpText>Free text -EXECUTIVE SUMMARY
Based on your findings from interviews with this stakeholder, what would be the main selling message?
This should be used as a basis for preparation of negotiation and delivery of Value Proposition.</inlineHelpText>
        <label>Key Message in Value Proposition</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NBA__c</fullName>
        <inlineHelpText>Evaluate stakeholder&apos;s attitude towards Next Best Alternative (NBA)</inlineHelpText>
        <label>NBA</label>
        <picklist>
            <picklistValues>
                <fullName>Enthusiastic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Positive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neutral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Negative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hostile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Opportunity_Amount__c</fullName>
        <formula>Opportunity__r.Amount</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity_Close_Date__c</fullName>
        <formula>Opportunity__r.CloseDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Influences</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Role_In_The_Buying_Center__c</fullName>
        <inlineHelpText>Ultimate Approver: Agenda is composed by Financials-Can OVERRULE all other decision makers 
Screener: Focused on requirements and is setting the rules of the game 
Operator: Focused on getting the “Job Done&quot;. Is either user or supervisor of us</inlineHelpText>
        <label>Role In The Buying Center</label>
        <picklist>
            <picklistValues>
                <fullName>Ultimate Approver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Screener</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operator</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Urgency__c</fullName>
        <inlineHelpText>How quickly does the stakeholder need to take action?</inlineHelpText>
        <label>Urgency</label>
        <picklist>
            <picklistValues>
                <fullName>Mandatory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Significant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Visit_Priority__c</fullName>
        <label>Visit Priority</label>
        <picklist>
            <picklistValues>
                <fullName>HIGH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LOW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TBD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>